Thu Nov 16 13:36:17 2023  Rob Lauer  <rlauer6@comcast.net>

	[make check]:
	* includes/perlcritic.inc: add pbp to theme
	* .gitignore: + generatedd files cpan/, t/
	* Makefile.am: remove README.md from build
	* README.md: symlink to module README.md
	* cpan/Makefile.am: rm directory if created
	* src/main/perl/lib/CLI/Simple.pm.in: pod tweaks
	* src/main/perl/lib/Makefile.am: build .t files from .t.in
	* src/main/perl/lib/README.md: generated
	* src/main/perl/lib/CLI/Simple/README.md: likewise

Thu Nov 16 07:53:09 2023  Rob Lauer  <rlauer6@comcast.net>

	[docs/wip]:
	* README.md: generated
	* src/main/perl/lib/CLI/Simple.pm.in
	* src/main/perl/lib/CLI/Simple/README.md

Wed Nov 15 16:25:19 2023  Rob Lauer  <rlauer6@comcast.net>

	[docs]:
	* Makefile.am: make docs
	* README.md: generated
	* src/main/perl/lib/CLI/Simple/README.md: likewise
	* src/main/perl/lib/CLI/Simple.pm.in: pod tweaks

Wed Nov 15 15:51:35 2023  Rob Lauer  <rlauer6@comcast.net>

	[BigBang]:
	* .gitignore: add .3man
	* README.md: new
	* includes/perl-modules.inc: dependencies
	* src/examples/myscript.pm: new
	* src/main/perl/lib/CLI/Simple.pm.in
	- replace template with actual file
	* src/main/perl/lib/CLI/Simple/Constants.pm.in: likewise
	* src/main/perl/lib/CLI/Simple/Utils.pm.in: likewise
	* src/main/perl/lib/CLI/Simple/Constants/README.md: new
	* src/main/perl/lib/CLI/Simple/README.md: new
	* src/main/perl/lib/CLI/Simple/Utils/README.md: new
	* src/main/perl/lib/README.md: new

Wed Nov 15 08:15:23 2023 <rlauer6@comcast.net>

	[BigBang]:

	* VERSION: new
	* .autoconf-template-perlrc: new
	* .gitignore: new
	* bootstrap: new
	* ChangeLog: new
	* configure.ac: new
	* COPYING: new
	* COPYRIGHT: new
	* Makefile.am: new
	* manifest.yaml: new
	* perl-CLI-Simple.spec.in: new
	* perlcriticrc: new
	* perltidyrc: new
	* README.md: new
	* requires.json: new
	* requires.txt: new
	* autotools/ads_PERL_INCLUDES.m4: new
	* autotools/ads_PERL_MODULE.m4: new
	* autotools/ads_PROG_PERL.m4: new