@@ -1,3 +1,10 @@
+Thu Nov 16 15:18:56 2023  Rob Lauer  <rlauer6@comcast.net>
+
+	[pod tweaks]:
+	* src/main/perl/lib/CLI/Simple.pm.in
+	- pod tweaks
+	(new): accept hash or hash ref
+
 Thu Nov 16 13:36:17 2023  Rob Lauer  <rlauer6@comcast.net>
 
 	[make check]:
